hybrid sort with bubble sort

--- a/algorithm-lab/report/lab1.tex
+++ b/algorithm-lab/report/lab1.tex
@@ -40,6 +40,7 @@ Hybrid Sort algorithm with Merge Sort  based on various input size and various
 threshold on randomly generated data.
 \subsection{Code}
 \begin{code}
+    \label{code:hybrid}
     \caption{Code for hybrid sort}
     \cppcode{../hybrid_sort.cpp}
 \end{code}
