--- a/algorithm-lab/report/lab1.tex
+++ b/algorithm-lab/report/lab1.tex
@@ -56,5 +56,10 @@ comparison between Merge Sort, Hybrid Sort with Insertion Sort, Hybrid Sort
 with Bubble Sort algorithm based on various input size and various threshold on
 randomly generated data.
 \subsection{Code}
+\begin{code}
+    \label{code:bubble}
+    \caption{Code for hybrid sort with bubble sort}
+    \cppcode{../bubble.cpp}
+\end{code}
 \subsection{Output}
 \subsection{Result Analysis \& Discussion}
