--- a/algorithm-lab/report/titlepage.tex
+++ b/algorithm-lab/report/titlepage.tex
@@ -6,6 +6,7 @@
 \usepackage{inconsolata}
 \usepackage{float}
 \usepackage{caption}
+\usepackage{subcaption}
 \usepackage{parskip}
 \usepackage{hyperref}
 \usepackage{minted}
