hybrid sorts updated

--- a/algorithm-lab/report/lab1.tex
+++ b/algorithm-lab/report/lab1.tex
@@ -117,3 +117,32 @@ randomly generated data.
     \includegraphics[width=0.7\textwidth]{task1_merge_count.png}
 \end{figure}
 \subsection{Result Analysis \& Discussion}
+
+\begin{table}[H]
+    \centering
+    \caption{3-way comparison table for merge \& hybrid sort}
+    \label{tab:comp}
+\begin{tabular}{llrr}
+    \toprule
+    \multicolumn{4}{c}{Sorting Algorithm} \\
+    \cmidrule(r){2-4}
+    Property & Merge Sort & Hybrid w/ insertion sort & Hybrid w/ bubble sort \\
+    \midrule
+    Gnat & per gram & 13.65 \\
+    & each & 0.01 \\
+    Gnu & stuffed & 92.50 \\
+    Emu & stuffed & 33.33 \\
+    Armadillo & frozen & 8.99 \\
+    \bottomrule
+\end{tabular}
+\end{table}
+
+\section{Task 4}
+\subsection{Problem Statement}
+
+\subsection{Code}
+\begin{code}
+    
+\end{code}
+
+\subsection{Output}
