--- a/algorithm-lab/report/titlepage.tex
+++ b/algorithm-lab/report/titlepage.tex
@@ -9,6 +9,7 @@
 \usepackage{parskip}
 \usepackage{booktabs}
 \usepackage{hyperref}
+\usepackage{cleveref}
 \usepackage{minted}
 % university
 \newcommand{\univ}{Rajshahi University of Engineering \& Technology}
