algo | lab report for convex hull

--- a/algorithm-lab/report/titlepage.tex
+++ b/algorithm-lab/report/titlepage.tex
@@ -18,7 +18,7 @@
 % Course title
 \newcommand{\thecourse}{Algorithms Analysis \& Design Sessional}
 % Lab report Title
-\newcommand{\thetitle}{Sorting}
+\newcommand{\thetitle}{Convex Hull, Matrix Multiplication}
 % Author
 \newcommand{\theauthor}{Kaif Ahmed Khan}
 % Teacher
@@ -93,7 +93,8 @@ Submitted to\par
 \newpage
 %%%% Add Lab Pages %%%%
 \pagenumbering{arabic}
-\include{lab1.tex}
+% \include{lab1.tex}
+\include{lab2.tex}
 
 
 \end{document}
