--- a/algorithm-lab/report/titlepage.tex
+++ b/algorithm-lab/report/titlepage.tex
@@ -4,6 +4,7 @@
 % \usepackage{tgpagella}
 \usepackage{inconsolata}
 \usepackage{float}
+\usepackage{siunitx}
 \usepackage{caption}
 \usepackage{subcaption}
 \usepackage{parskip}
@@ -18,7 +19,7 @@
 % Course title
 \newcommand{\thecourse}{Algorithms Analysis \& Design Sessional}
 % Lab report Title
-\newcommand{\thetitle}{Convex Hull, Matrix Multiplication}
+\newcommand{\thetitle}{Convex Hull}
 % Author
 \newcommand{\theauthor}{Kaif Ahmed Khan}
 % Teacher
