[algo] matrix multiplication

--- a/algorithm-lab/report/titlepage.tex
+++ b/algorithm-lab/report/titlepage.tex
@@ -19,7 +19,7 @@
 % Course title
 \newcommand{\thecourse}{Algorithms Analysis \& Design Sessional}
 % Lab report Title
-\newcommand{\thetitle}{Convex Hull}
+\newcommand{\thetitle}{Matrix Multiplication}
 % Author
 \newcommand{\theauthor}{Kaif Ahmed Khan}
 % Teacher
@@ -95,7 +95,8 @@ Submitted to\par
 %%%% Add Lab Pages %%%%
 \pagenumbering{arabic}
 % \include{lab1.tex}
-\include{lab2.tex}
+% \include{lab2.tex}
+\include{lab3.tex}
 
 
 \end{document}
